markdown-pages/ja/tidb/release-6.5/dm/maintain-dm-using-tiup.md
---
title: Maintain a DM Cluster Using TiUP
summary: Learn how to maintain a DM cluster using TiUP.
---

# TiUPを使用して DMクラスタを管理 {#maintain-a-dm-cluster-using-tiup}

このドキュメントでは、 TiUP DMコンポーネントを使用して DM クラスターを維持する方法を紹介します。

DM クラスターをまだ展開していない場合は、手順について[TiUPを使用して DMクラスタをデプロイ](/dm/deploy-a-dm-cluster-using-tiup.md)を参照できます。

> **ノート：**
>
> -   次のコンポーネント間のポートが相互接続されていることを確認してください
>     -   DM-master ノードの`peer_port` (デフォルトでは`8291` ) は相互接続されています。
>     -   各 DM-master ノードは、すべての DM-worker ノードの`port` (デフォルトでは`8262` ) に接続できます。
>     -   各 DM-worker ノードは、すべての DM-master ノードの`port` (デフォルトでは`8261` ) に接続できます。
>     -   TiUPノードは、すべての DM マスター ノードの`port` (デフォルトでは`8261` ) に接続できます。
>     -   TiUPノードは、すべての DM-worker ノードの`port` (デフォルトでは`8262` ) に接続できます。

TiUP DMコンポーネントのヘルプ情報については、次のコマンドを実行してください。

```bash
tiup dm --help
```

```
Deploy a DM cluster for production

Usage:
  tiup dm [flags]
  tiup dm [command]

Available Commands:
  deploy      Deploy a DM cluster for production
  start       Start a DM cluster
  stop        Stop a DM cluster
  restart     Restart a DM cluster
  list        List all clusters
  destroy     Destroy a specified DM cluster
  audit       Show audit log of cluster operation
  exec        Run shell command on host in the dm cluster
  edit-config Edit DM cluster config
  display     Display information of a DM cluster
  reload      Reload a DM cluster's config and restart if needed
  upgrade     Upgrade a specified DM cluster
  patch       Replace the remote package with a specified package and restart the service
  scale-out   Scale out a DM cluster
  scale-in    Scale in a DM cluster
  import      Import an exist DM 1.0 cluster from dm-ansible and re-deploy 2.0 version
  help        Help about any command

Flags:
  -h, --help               help for tiup-dm
      --native-ssh         Use the native SSH client installed on local system instead of the build-in one.
      --ssh-timeout int    Timeout in seconds to connect host via SSH, ignored for operations that don't need an SSH connection. (default 5)
  -v, --version            version for tiup-dm
      --wait-timeout int   Timeout in seconds to wait for an operation to complete, ignored for operations that don't fit. (default 60)
  -y, --yes                Skip all confirmations and assumes 'yes'
```

## クラスタ リストをビュー {#view-the-cluster-list}

クラスターが正常にデプロイされたら、次のコマンドを実行してクラスター リストを表示します。


```bash
tiup dm list
```

```
Name  User  Version  Path                                  PrivateKey
----  ----  -------  ----                                  ----------
prod-cluster  tidb  ${version}  /root/.tiup/storage/dm/clusters/test  /root/.tiup/storage/dm/clusters/test/ssh/id_rsa
```

## クラスターを開始する {#start-the-cluster}

クラスターが正常にデプロイされたら、次のコマンドを実行してクラスターを開始します。


```shell
tiup dm start prod-cluster
```

クラスターの名前を忘れた場合は、 `tiup dm list`を実行してクラスター リストを表示します。

## クラスターの状態を確認する {#check-the-cluster-status}

TiUP は、クラスター内の各コンポーネントのステータスを表示するための`tiup dm display`コマンドを提供します。このコマンドを使用すると、コンポーネントのステータスを確認するために各マシンにログインする必要がなくなります。コマンドの使用法は次のとおりです。


```bash
tiup dm display prod-cluster
```

```
dm Cluster: prod-cluster
dm Version: ${version}
ID                 Role          Host          Ports      OS/Arch       Status     Data Dir                           Deploy Dir
--                 ----          ----          -----      -------       ------     --------                           ----------
172.19.0.101:9093  alertmanager  172.19.0.101  9093/9094  linux/x86_64  Up         /home/tidb/data/alertmanager-9093  /home/tidb/deploy/alertmanager-9093
172.19.0.101:8261  dm-master     172.19.0.101  8261/8291  linux/x86_64  Healthy|L  /home/tidb/data/dm-master-8261     /home/tidb/deploy/dm-master-8261
172.19.0.102:8261  dm-master     172.19.0.102  8261/8291  linux/x86_64  Healthy    /home/tidb/data/dm-master-8261     /home/tidb/deploy/dm-master-8261
172.19.0.103:8261  dm-master     172.19.0.103  8261/8291  linux/x86_64  Healthy    /home/tidb/data/dm-master-8261     /home/tidb/deploy/dm-master-8261
172.19.0.101:8262  dm-worker     172.19.0.101  8262       linux/x86_64  Free       /home/tidb/data/dm-worker-8262     /home/tidb/deploy/dm-worker-8262
172.19.0.102:8262  dm-worker     172.19.0.102  8262       linux/x86_64  Free       /home/tidb/data/dm-worker-8262     /home/tidb/deploy/dm-worker-8262
172.19.0.103:8262  dm-worker     172.19.0.103  8262       linux/x86_64  Free       /home/tidb/data/dm-worker-8262     /home/tidb/deploy/dm-worker-8262
172.19.0.101:3000  grafana       172.19.0.101  3000       linux/x86_64  Up         -                                  /home/tidb/deploy/grafana-3000
172.19.0.101:9090  prometheus    172.19.0.101  9090       linux/x86_64  Up         /home/tidb/data/prometheus-9090    /home/tidb/deploy/prometheus-9090
```

`Status`列は、サービスが正常に実行されているかどうかを示すために`Up`または`Down`を使用します。

DM-masterコンポーネントの場合、ステータスに`|L`追加される場合があります。これは、DM-master ノードがLeaderであることを示します。 DM-workerコンポーネントの場合、 `Free`現在の DM-worker ノードがアップストリームにバインドされていないことを示します。

## クラスターでのスケールイン {#scale-in-a-cluster}

クラスターでのスケーリングとは、一部のノードをオフラインにすることを意味します。この操作は、指定されたノードをクラスターから削除し、残りのデータ ファイルを削除します。

クラスターをスケールインすると、DM-master および DM-worker コンポーネントでの DM 操作は次の順序で実行されます。

1.  コンポーネントプロセスを停止します。
2.  DM-master の API を呼び出して`member`を削除します。
3.  ノードに関連するデータ ファイルをクリーンアップします。

スケールイン コマンドの基本的な使用法:

```bash
tiup dm scale-in <cluster-name> -N <node-id>
```

このコマンドを使用するには、クラスター名とノード ID の少なくとも 2 つの引数を指定する必要があります。ノード ID は、前のセクションの`tiup dm display`コマンドを使用して取得できます。

たとえば、 `172.16.5.140`で DM-worker ノードをスケーリングするには (DM-master でのスケーリングと同様)、次のコマンドを実行します。


```bash
tiup dm scale-in prod-cluster -N 172.16.5.140:8262
```

## クラスターをスケールアウトする {#scale-out-a-cluster}

スケールアウト操作には、デプロイと同様の内部ロジックがあります。TiUP TiUP DMコンポーネントは、まずノードの SSH 接続を確認し、ターゲット ノードに必要なディレクトリを作成してから、デプロイ操作を実行し、ノード サービスを開始します。

たとえば、 `prod-cluster`クラスター内の DM-worker ノードをスケールアウトするには、次の手順を実行します (DM-master のスケールアウトにも同様の手順があります)。

1.  `scale.yaml`ファイルを作成し、新しいワーカー ノードの情報を追加します。

    > **ノート：**
    >
    > 既存のノードではなく、新しいノードの説明のみを含むトポロジ ファイルを作成する必要があります。その他の構成項目 (デプロイメント・ディレクトリーなど) については、この[TiUP構成パラメーターの例](https://github.com/pingcap/tiup/blob/master/embed/examples/dm/topology.example.yaml)を参照してください。

    ```yaml
    ---

    worker_servers:
      - host: 172.16.5.140

    ```

2.  スケールアウト操作を実行します。 TiUP DM は、 `scale.yaml`で説明したポート、ディレクトリ、およびその他の情報に従って、対応するノードをクラスターに追加します。

    
    ```shell
    tiup dm scale-out prod-cluster scale.yaml
    ```

    コマンドの実行後、 `tiup dm display prod-cluster`を実行すると、スケールアウトされたクラスターの状態を確認できます。

## ローリング アップグレード {#rolling-upgrade}

> **ノート：**
>
> v2.0.5 以降、dmctl サポート[データ ソースのエクスポートとインポート、およびクラスターのタスクコンフィグレーション](/dm/dm-export-import-config.md) 。
>
> アップグレードする前に、 `config export`を使用してクラスターの構成ファイルをエクスポートできます。アップグレード後、以前のバージョンにダウングレードする必要がある場合は、最初に以前のクラスターを再デプロイしてから、 `config import`を使用して以前の構成ファイルをインポートできます。
>
> v2.0.5 より前のクラスターの場合、dmctl v2.0.5 以降を使用して、データ ソースとタスク構成ファイルをエクスポートおよびインポートできます。
>
> v2.0.2以降のクラスタでは、現在、Relay Workerに関連する設定の自動インポートはサポートされていません。 `start-relay`コマンドを使用して、手動で[リレーログを開始](/dm/relay-log.md#start-and-stop-the-relay-log-feature)実行できます。

ローリング アップグレード プロセスは、アプリケーションに対して可能な限り透過的に行われ、ビジネスに影響を与えません。操作はノードによって異なります。

### アップグレード コマンド {#upgrade-command}

`tiup dm upgrade`コマンドを実行して、DM クラスターをアップグレードできます。たとえば、次のコマンドはクラスターを`${version}`にアップグレードします。このコマンドを実行する前に、 `${version}`必要なバージョンに変更します。


```bash
tiup dm upgrade prod-cluster ${version}
```

## 構成の更新 {#update-configuration}

コンポーネント構成を動的に更新する場合、 TiUP DMコンポーネントは各クラスターの現在の構成を保存します。この構成を編集するには、 `tiup dm edit-config <cluster-name>`コマンドを実行します。例えば：


```bash
tiup dm edit-config prod-cluster
```

TiUP DM は、 vi エディターで構成ファイルを開きます。他のエディターを使用する場合は、 `EDITOR`環境変数を使用して、 `export EDITOR=nano`などのエディターをカスタマイズします。ファイルを編集したら、変更を保存します。新しい構成をクラスターに適用するには、次のコマンドを実行します。


```bash
tiup dm reload prod-cluster
```

このコマンドは、構成をターゲット マシンに送信し、クラスターを再起動して構成を有効にします。

## コンポーネントの更新 {#update-component}

通常のアップグレードでは、 `upgrade`コマンドを使用できます。ただし、デバッグなどの一部のシナリオでは、現在実行中のコンポーネントを一時パッケージに置き換える必要がある場合があります。これを実現するには、 `patch`コマンドを使用します。


```bash
tiup dm patch --help
```

```
Replace the remote package with a specified package and restart the service

Usage:
  tiup dm patch <cluster-name> <package-path> [flags]

Flags:
  -h, --help                   help for patch
  -N, --node strings           Specify the nodes
      --overwrite              Use this package in the future scale-out operations
  -R, --role strings           Specify the role
      --transfer-timeout int   Timeout in seconds when transferring dm-master leaders (default 300)

Global Flags:
      --native-ssh         Use the native SSH client installed on local system instead of the build-in one.
      --ssh-timeout int    Timeout in seconds to connect host via SSH, ignored for operations that don't need an SSH connection. (default 5)
      --wait-timeout int   Timeout in seconds to wait for an operation to complete, ignored for operations that don't fit. (default 60)
  -y, --yes                Skip all confirmations and assumes 'yes'
```

DM-master ホットフィックス パッケージが`/tmp/dm-master-hotfix.tar.gz`にあり、クラスター内のすべての DM-master パッケージを置き換える場合は、次のコマンドを実行します。


```bash
tiup dm patch prod-cluster /tmp/dm-master-hotfix.tar.gz -R dm-master
```

クラスター内の 1 つの DM-master パッケージのみを置き換えることもできます。


```bash
tiup dm patch prod-cluster /tmp/dm--hotfix.tar.gz -N 172.16.4.5:8261
```

## DM-Ansible を使用してデプロイされた DM 1.0 クラスターをインポートしてアップグレードする {#import-and-upgrade-a-dm-1-0-cluster-deployed-using-dm-ansible}

> **ノート：**
>
> -   TiUP は、 DM 1.0 クラスターでの DM ポータルコンポーネントのインポートをサポートしていません。
> -   インポートする前に、元のクラスターを停止する必要があります。
> -   2.0 にアップグレードする必要があるタスクに対して`stop-task`を実行しないでください。
> -   TiUP は、v2.0.0-rc.2 以降のバージョンの DM クラスターへのインポートのみをサポートします。
> -   `import`コマンドは、DM 1.0 クラスターから新しい DM 2.0 クラスターにデータをインポートするために使用されます。 DM 移行タスクを既存の DM 2.0 クラスターにインポートする必要がある場合は、 [TiDB データ移行を v1.0.x から v2.0+ に手動でアップグレードする](/dm/manually-upgrade-dm-1.0-to-2.0.md)を参照してください。
> -   一部のコンポーネントのデプロイメント ディレクトリは、元のクラスタのものとは異なります。 `display`コマンドを実行して詳細を表示できます。
> -   インポートする前に`tiup update --self && tiup update dm`を実行して、 TiUP DMコンポーネントが最新バージョンであることを確認します。
> -   インポート後、クラスタには DM-master ノードが 1 つだけ存在します。 DM-master をスケールアウトするには、 [クラスターをスケールアウトする](#scale-out-a-cluster)を参照してください。

TiUPがリリースされる前は、DM-Ansible を使用して DM クラスターをデプロイすることがよくありました。 DM-Ansible によってデプロイされた DM 1.0 クラスターをTiUPが引き継ぐことができるようにするには、 `import`コマンドを使用します。

たとえば、DM Ansible を使用してデプロイされたクラスターをインポートするには、次のようにします。


```bash
tiup dm import --dir=/path/to/dm-ansible --cluster-version ${version}
```

`tiup list dm-master`を実行して、 TiUPでサポートされている最新のクラスター バージョンを表示します。

`import`コマンドを使用するプロセスは次のとおりです。

1.  TiUP は、 DM-Ansible を使用して以前にデプロイされた DM クラスターに基づいて、トポロジー ファイル[`topology.yml`](https://github.com/pingcap/tiup/blob/master/embed/examples/dm/topology.example.yaml)を生成します。
2.  トポロジ ファイルが生成されていることを確認したら、それを使用して v2.0 以降のバージョンの DM クラスターをデプロイできます。

デプロイが完了したら、 `tiup dm start`コマンドを実行してクラスターを開始し、DM カーネルのアップグレード プロセスを開始できます。

## 操作ログをビュー {#view-the-operation-log}

操作ログを表示するには、 `audit`コマンドを使用します。 `audit`コマンドの使用法は次のとおりです。

```bash
Usage:
  tiup dm audit [audit-id] [flags]

Flags:
  -h, --help   help for audit
```

`[audit-id]`引数が指定されていない場合、コマンドは実行されたコマンドのリストを表示します。例えば：


```bash
tiup dm audit
```

```
ID      Time                  Command
--      ----                  -------
4D5kQY  2020-08-13T05:38:19Z  tiup dm display test
4D5kNv  2020-08-13T05:36:13Z  tiup dm list
4D5kNr  2020-08-13T05:36:10Z  tiup dm deploy -p prod-cluster ${version} ./examples/dm/minimal.yaml
```

最初の列は`audit-id`です。特定のコマンドの実行ログを表示するには、次のように`audit-id`引数を渡します。


```bash
tiup dm audit 4D5kQY
```

## DM クラスター内のホストでコマンドを実行する {#run-commands-on-a-host-in-the-dm-cluster}

DM クラスター内のホストでコマンドを実行するには、 `exec`コマンドを使用します。 `exec`コマンドの使用法は次のとおりです。

```bash
Usage:
  tiup dm exec <cluster-name> [flags]

Flags:
      --command string   the command run on cluster host (default "ls")
  -h, --help             help for exec
  -N, --node strings     Only exec on host with specified nodes
  -R, --role strings     Only exec on host with specified roles
      --sudo             use root permissions (default false)
```

たとえば、すべての DM ノードで`ls /tmp`を実行するには、次のコマンドを実行します。


```bash
tiup dm exec prod-cluster --command='ls /tmp'
```

## dmctl {#dmctl}

TiUP は、 DM クラスタ コントローラを統合します`dmctl` 。

次のコマンドを実行して、dmctl を使用します。

```bash
tiup dmctl [args]
```

dmctl のバージョンを指定します。このコマンドを実行する前に、 `${version}`必要なバージョンに変更します。

```
tiup dmctl:${version} [args]
```

ソースを追加する前の dmctl コマンドは`dmctl --master-addr master1:8261 operate-source create /tmp/source1.yml`です。 dmctl がTiUPに統合された後のコマンドは次のとおりです。


```bash
tiup dmctl --master-addr master1:8261 operate-source create /tmp/source1.yml
```

## システムのネイティブ SSH クライアントを使用してクラスターに接続する {#use-the-system-s-native-ssh-client-to-connect-to-cluster}

クラスタ マシンで実行される上記のすべての操作は、 TiUPに組み込まれている SSH クライアントを使用してクラスタに接続し、コマンドを実行します。ただし、シナリオによっては、制御マシン システムにネイティブな SSH クライアントを使用して、このようなクラスター操作を実行する必要がある場合もあります。例えば：

-   認証に SSH プラグインを使用するには
-   カスタマイズされた SSH クライアントを使用するには

次に、 `--native-ssh`コマンドライン フラグを使用して、システム ネイティブのコマンドライン ツールを有効にできます。

-   クラスターをデプロイ。 `tiup dm deploy <cluster-name> <version> <topo> --native-ssh` . `<cluster-name>`にはクラスターの名前、 `<version>`にはデプロイする DM のバージョン ( `v6.5.2`など)、 `<topo>`にはトポロジ ファイル名を入力します。
-   クラスターを開始します。 `tiup dm start <cluster-name> --native-ssh` .
-   クラスターのアップグレード: `tiup dm upgrade ... --native-ssh`

上記のすべてのクラスター操作コマンドに`--native-ssh`を追加して、システムのネイティブ SSH クライアントを使用できます。

すべてのコマンドでこのようなフラグを追加することを避けるために、 `TIUP_NATIVE_SSH`システム変数を使用して、ローカル SSH クライアントを使用するかどうかを指定できます。

```sh
export TIUP_NATIVE_SSH=true
# or
export TIUP_NATIVE_SSH=1
# or
export TIUP_NATIVE_SSH=enable
```

この環境変数と`--native-ssh`同時に指定すると、 `--native-ssh`が優先されます。

> **ノート：**
>
> クラスター展開のプロセス中に、接続にパスワードを使用する必要がある場合、またはキー ファイルで`passphrase`が構成されている場合は、制御マシンに`sshpass`インストールされていることを確認する必要があります。それ以外の場合、タイムアウト エラーが報告されます。
